fixed homepage particle size on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -54,6 +54,7 @@
   /* height:3rem; */
   /* height: 3.5rem; */
   height: 2.5rem;
+  max-width: 100vw;
 }
 
 
